Fixes mobile .nav-tab.is-active bug
The orange bar above the issue title was too low, striking through
the first line (multi-line titles only, I suspect).  This adds CSS
within a small-up media-query to change margin-top, and duplicates
default CSS for larger viewports.

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -566,6 +566,16 @@ $hero-height: 30rem !default;
       p {
           top: 25%;
       }
+      &.is-active {
+        a::after {
+          $bar-width-ratio: 75;
+          height: 2px;
+          width: #{$bar-width-ratio}%;
+          left: #{(100 - $bar-width-ratio) / 2}%;
+          margin: -2.3em auto 15px auto;
+          background-color: $info-color;
+        }
+      }
     }
   }
   #nav-tabs {
@@ -617,6 +627,17 @@ $hero-height: 30rem !default;
         }
         p {
           top: 33%;
+        }
+        a::after {
+          $bar-width-ratio: 45;
+          display: block;
+          position:absolute;
+          content: "";
+          height: 2px;
+          width: #{$bar-width-ratio}%;
+          left: #{(100 - $bar-width-ratio) / 2}%;
+          margin: -1.8em auto 15px auto;
+          background-color: $info-color;
         }
       }
     }
